# red-2400-reader

./: .gitignore  CITATION.cff  DATA_LICENSE  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: quickstart.ipynb
red2400/: __init__.py  examples.py  filters.py  reader.py  schema.py
tests/: test_reader.py
tests/fixtures/: sample.jsonl
